# cc-hooks

./: .env.example  .gitignore  .prettierignore  .prettierrc.json  .tool-versions  CHANGELOG.md  CLAUDE.md  MIGRATION.md  README.md  STANDALONE_README.md  check_setup.sh  claude.sh  config.py  db_cleanup.sh  hooks.py  package-lock.json  package.json  pyproject.toml  server.py  update.sh
.claude-plugin/: marketplace.json  plugin.json
app/: api.py  config.py  event_db.py  event_processor.py  migrations.py  types.py
commands/: setup.md  update.md
docs/: hooks-reference.md  hooks.md  language-codes.md  plugin-marketplace.md  plugins-reference.md  plugins.md
hooks/: hooks.json
status-lines/: status_line.py
utils/: __init__.py  audio_mappings.py  colored_logger.py  config_loader.py  constants.py  editor_detector.py  hooks_constants.py  openrouter_prompts.py  openrouter_service.py  process_utils.py  sound_player.py  transcript_parser.py  tts_announcer.py  tts_manager.py  version_checker.py
utils/tts_providers/: __init__.py  base.py  elevenlabs_provider.py  factory.py  gtts_provider.py  kokoro_provider.py  mappings.py  prerecorded_provider.py
