[project]
name = "cc-hooks"
version = "0.0.0"
description = "Claude Code hooks processing system with TTS announcements and contextual AI"
requires-python = ">=3.12"

# Runtime dependencies (also declared inline via PEP 723 per-script)
# Listed here so mypy can resolve types across the codebase
dependencies = [
    "aiosqlite>=0.21.0,<0.22",
    "elevenlabs>=2.16.0,<3",
    "fastapi>=0.118.0,<0.119",
    "gtts>=2.5.4,<3",
    "openai>=2.1.0,<3",
    "psutil>=6.1.1,<7",
    "pygame>=2.6.1,<3",
    "pydantic>=2.11.10,<3",
    "python-dotenv>=1.1.1,<2",
    "pyyaml>=6.0.1,<7",
    "requests>=2.32.5,<3",
    "uvicorn>=0.37.0,<0.38",
]

[dependency-groups]
dev = [
    "mypy>=1.15",
    "types-psutil",
    "types-pyyaml",
    "types-requests",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true
exclude = [
    "^\\.venv/",
]
